@@ -147,51 +147,51 @@ Warning: at toplevel:
   (scrutiny-tests.scm:208) in procedure call to `f', expected argument #1 of type `list' but was given an argument of type `(pair fixnum fixnum)'
 
 Warning: in toplevel procedure `vector-ref-warn1':
-  (scrutiny-tests.scm:219) in procedure call to `"vector-ref"', index -1 out of range for vector of length 3
+  (scrutiny-tests.scm:214) in procedure call to `"vector-ref"', index -1 out of range for vector of length 3
 
 Warning: in toplevel procedure `vector-ref-warn2':
-  (scrutiny-tests.scm:221) in procedure call to `"vector-ref"', index 3 out of range for vector of length 3
+  (scrutiny-tests.scm:216) in procedure call to `"vector-ref"', index 3 out of range for vector of length 3
 
 Warning: in toplevel procedure `vector-ref-warn3':
-  (scrutiny-tests.scm:223) in procedure call to `"vector-ref"', index 4 out of range for vector of length 3
+  (scrutiny-tests.scm:217) in procedure call to `"vector-ref"', index 4 out of range for vector of length 3
 
 Warning: in toplevel procedure `vector-ref-standard-warn1':
-  (scrutiny-tests.scm:231) in procedure call to `vector-ref', expected argument #2 of type `fixnum' but was given an argument of type `symbol'
+  (scrutiny-tests.scm:220) in procedure call to `vector-ref', expected argument #2 of type `fixnum' but was given an argument of type `symbol'
 
 Warning: in toplevel procedure `vector-set!-warn1':
-  (scrutiny-tests.scm:234) in procedure call to `"vector-set!"', index -1 out of range for vector of length 3
+  (scrutiny-tests.scm:221) in procedure call to `"vector-set!"', index -1 out of range for vector of length 3
 
 Warning: in toplevel procedure `vector-set!-warn2':
-  (scrutiny-tests.scm:236) in procedure call to `"vector-set!"', index 3 out of range for vector of length 3
+  (scrutiny-tests.scm:222) in procedure call to `"vector-set!"', index 3 out of range for vector of length 3
 
 Warning: in toplevel procedure `vector-set!-warn3':
-  (scrutiny-tests.scm:238) in procedure call to `"vector-set!"', index 4 out of range for vector of length 3
+  (scrutiny-tests.scm:223) in procedure call to `"vector-set!"', index 4 out of range for vector of length 3
 
 Warning: in toplevel procedure `vector-set!-standard-warn1':
-  (scrutiny-tests.scm:246) in procedure call to `vector-set!', expected argument #2 of type `fixnum' but was given an argument of type `symbol'
+  (scrutiny-tests.scm:226) in procedure call to `vector-set!', expected argument #2 of type `fixnum' but was given an argument of type `symbol'
 
 Warning: in toplevel procedure `list-ref-warn1':
-  (scrutiny-tests.scm:249) in procedure call to `"list-ref"', index -1 out of range for list of type (list symbol symbol symbol)
+  (scrutiny-tests.scm:232) in procedure call to `"list-ref"', index -1 out of range for list of type (list symbol symbol symbol)
 
 Warning: in toplevel procedure `list-ref-warn2':
-  (scrutiny-tests.scm:251) in procedure call to `"list-ref"', index -1 out of range for list of type (pair symbol (pair symbol (pair symbol *)))
+  (scrutiny-tests.scm:234) in procedure call to `"list-ref"', index -1 out of range for list of type (pair symbol (pair symbol (pair symbol *)))
 
 Warning: in toplevel procedure `list-ref-warn3':
-  (scrutiny-tests.scm:253) in procedure call to `"list-ref"', index 3 out of range for list of type (list symbol symbol symbol)
+  (scrutiny-tests.scm:236) in procedure call to `"list-ref"', index 3 out of range for list of type (list symbol symbol symbol)
 
 Warning: in toplevel procedure `list-ref-warn4':
-  (scrutiny-tests.scm:255) in procedure call to `"list-ref"', index 3 out of range for list of type (pair symbol (pair symbol (pair symbol *)))
+  (scrutiny-tests.scm:238) in procedure call to `"list-ref"', index 3 out of range for list of type (pair symbol (pair symbol (pair symbol *)))
 
 Warning: in toplevel procedure `list-ref-warn5':
-  (scrutiny-tests.scm:257) in procedure call to `"list-ref"', index 4 out of range for list of type (list symbol symbol symbol)
+  (scrutiny-tests.scm:240) in procedure call to `"list-ref"', index 4 out of range for list of type (list symbol symbol symbol)
 
 Warning: in toplevel procedure `list-ref-warn6':
-  (scrutiny-tests.scm:259) in procedure call to `"list-ref"', index 4 out of range for list of type (pair symbol (pair symbol (pair symbol *)))
+  (scrutiny-tests.scm:242) in procedure call to `"list-ref"', index 4 out of range for list of type (pair symbol (pair symbol (pair symbol *)))
 
 Warning: in toplevel procedure `list-ref-standard-warn1':
-  (scrutiny-tests.scm:271) in procedure call to `list-ref', expected argument #2 of type `fixnum' but was given an argument of type `symbol'
+  (scrutiny-tests.scm:254) in procedure call to `list-ref', expected argument #2 of type `fixnum' but was given an argument of type `symbol'
 
 Warning: in toplevel procedure `list-ref-standard-warn2':
-  (scrutiny-tests.scm:273) in procedure call to `list-ref', expected argument #2 of type `fixnum' but was given an argument of type `symbol'
+  (scrutiny-tests.scm:256) in procedure call to `list-ref', expected argument #2 of type `fixnum' but was given an argument of type `symbol'
 
 Warning: redefinition of standard binding: car
